# blogger

./: .gitignore  README.md  _config.yaml  blogger.opam  dune  dune-project  filipeom.opam  filipeom.opam.template  index.md
.github/workflows/: deploy.yml
assets/css/: style.css
assets/keys/: gpg.asc
includes/: footer.html  header.html
pages/: 404.md  blog.md  index.md  projects.md  publications.md
src/: blog.ml  build.ml  config.ml  document.ml  dune  jingoo_build.ml  layout.ml  main.ml  meta.ml  page.ml  path.ml  std.ml  utils.ml
templates/: base.html  default.html  document.html  header.html  index.html  layout.html  page.html
